lots of changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <h1>JayTheDev</h1>
+        <h1>The Journey Of Jeremy</h1>
         <div id="menu-btn">
             <a href=""><img src="Assets/icons8-hamburger.svg" alt=""></a> 
         </div>
@@ -23,7 +23,12 @@
     </header>
 
     <main>
-
+        <h1>I'm  <u>Jeremy</u> — A Software <br> Engineer</h1>
+        <h2>I have decided to create this website after some inspiration
+        from a random person on twitter...</h2>
+        <p>I have to decided to document my journey in navigating this world.</p>    
+        <p>Whether people want to read it or not, it is what it is.</p>
+        <p>Obviously it would be great if you follow along but I feel like this will keep me accountable to continue progressing</p>
     </main>
 
     <footer>
