changes fonts and styles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <h1>The Journey Of Jeremy</h1>
         <div id="menu-btn">
-            <a href=""><img src="Assets/icons8-hamburger.svg" alt=""></a> 
+            <a href=""><img src="Assets/icons8-hamburger-new.svg" alt=""></a> 
+        </div>
+
+        <h1>The Journey Of Jeremy</h1>
+        
+        <div id="logo">
+            <a href="https://github.com/jpea2"><img src="Assets/icons8-github.svg" alt=""></a>
         </div>
         
     </nav>
@@ -29,6 +37,7 @@
         <p>I have to decided to document my journey in navigating this world.</p>    
         <p>Whether people want to read it or not, it is what it is.</p>
         <p>Obviously it would be great if you follow along but I feel like this will keep me accountable to continue progressing</p>
+        <p>If you would like to see projects I have been working on, please take a look below</p>
     </main>
 
     <footer>
