deleted unneeded icons from footer and changed margins within footer

--- a/index.html
+++ b/index.html
@@ -51,26 +51,21 @@
     </main>
 
     <footer>
+        <p>Social Links</p>
         <div id="logo-container">
             <div>
-                <img src="Assets/icons8-github.svg" alt="">
-                <a href="">YouTube</a>
+                <a href="https://github.com/jpea2" target="_blank">
+                    Github
+                </a>
             </div>
 
-            <div>
-                <img src="Assets/icons8-github.svg" alt=""> 
-                <a href="">Github</a>
-            </div>
-
-            <div>
-                <img src="Assets/icons8-github.svg" alt="">
-                <a href="">Twitter</a>
+            <div>  
+                <a href="https://twitter.com/journeyofjeremy" target="_blank">
+                    Twitter
+                </a>
             </div>
             
-            <div>
-                <img src="Assets/icons8-github.svg" alt="">
-                <a href="">Youtube</a>
-            </div>
+
 
         </div>
         
